<resources>
    <string name="app_name">Meshope</string>

    <string name="search">جستجو</string>
    <string name="home">صفحه اصلی</string>
    <string name="sharge">شارژ</string>
    <string name="favoride">علاقه مندی ها</string>
    <string name="exit">خروج</string>


    <string name="title_logo_page">لباس های زنانه و زیبایی </string>

    <string name="allproducttext">همه محصولات این فروشگاه</string>
    <string name="email">ایمیل</string>
    <string name="phone">تلفن همراه</string>
    <string name="meli">شماره ملی</string>
    <string name="password">کلمه عبور</string>
    <string name="login">ورود</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">ارسال</string>


    <string name="ozeiyat">سبد خرید شما</string>
    <string name="qqq">179،000 ريال</string>
    <string name="qqq1">1،256،000 ريال</string>
    <string name="aa">86%</string>
    <string name="title_activity_mahsol2">mahsol2</string>
    <string name="wewe">خرید کنید</string>
    <string name="qqq111">سبد خرید شما</string>
    <string name="qqq1122">محصول اول</string>
    <string name="qqq113">توضیحات درباره محصول</string>
    <string name="qqq115">تعداد</string>
    <string name="qqq1117">قیمت:</string>
    <string name="qqq1118">جمع کل</string>
    <string name="qqq1119">تخفیف کالاها</string>
    <string name="qqq2000">جمع نهایی (1 کالا)</string>
    <string name="qqqq11177">ثبت سفارش</string>

    <string name="action_settings">Settings</string>
    <string name="a3">911،000ريال</string>
    <string name="a2">1،100،000ريال</string>
    <string name="a1">189،000ريال</string>


    <string name="a10">350،000ريال</string>
    <string name="a9">185،000ريال</string>


    <string name="a8">498،000ريال
</string>
    <string name="a7">175،000ريال
</string>
    <string name="a5">876،000ريال
</string>


    <string name="a">239،000ريال
</string>


    <string name="category_search">جستجو بر اساس دسته</string>


    <string name="category1">جوراب</string>

    <string name="category2">کرست</string>

    <string name="category3">روسری</string>

    <string name="category4">ساپرت</string>
    <string name="category5">سایر</string>



    <string name="name_profile">نام: امیر حسین</string>
    <string name="email_profile">ایمیل: amhsoleimannejad@gmail.com</string>
    <string name="address_profile">تهران پارس خیابان استخر بوستان 11 پلاک 7</string>
    <string name="charge_profile">شارژ شما 50.000 تومان</string>


    <string name="qqqqff">علاقه مندی های شما</string>
    <string name="price_holder">چه مقدار میخواهید شارژ کنید...</string>


</resources>
