<?xml version="1.0" encoding="utf-8"?>

<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
    <!--<item-->
        <!--android:id="@+id/action_item1"-->
        <!--android:icon="@drawable/home"-->
        <!--android:title="@string/item_1"/>-->
    <!--<item-->
        <!--android:id="@+id/action_item2"-->
        <!--android:icon="@drawable/search"-->
        <!--android:title="@string/item_2"/>-->
    <!--<item-->
        <!--android:id="@+id/action_item3"-->
        <!--android:icon="@drawable/signup"-->
        <!--android:title="@string/item_3"/>-->
<!--</menu>-->


<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/action_home"
    android:icon="@drawable/home"
    android:title="@string/home"/>

    <item
    android:id="@+id/action_search"
    android:icon="@drawable/search"
    android:title="@string/search"/>

    <item
    android:id="@+id/action_favoride"
    android:icon="@drawable/favorite"
    android:title="@string/favoride"/>


    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/exit"
        android:title="@string/exit"/>



    <item
        android:id="@+id/action_sharge"
        android:icon="@drawable/charge"
        android:title="@string/sharge"/>


</menu>