<?xml version="1.0" encoding="utf-8"?>





<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".TestActivity" >

<android.support.v4.widget.DrawerLayout
    android:id="@+id/DL"
    android:layoutDirection="rtl"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">










        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#19365E"
            android:id="@+id/relativeLayout"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_search"
                android:id="@+id/textView112"
                android:layout_marginRight="10dp"
                android:textColor="#FAFAFA"
                android:textSize="15sp"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/imageView" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/imageView"
                android:src="@drawable/a5"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp" />
        </RelativeLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="230dp">


            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/shape"

                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:id="@+id/imageView10"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/a1"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qqq1122"
                    android:id="@+id/textView301"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/imageView10"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:textColor="#19365E"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a10"
                    android:id="@+id/textView302"
                    android:layout_marginTop="10dp"
                    android:textColor="#979797"
                    android:textSize="8sp"
                    android:layout_below="@+id/textView301"
                    android:layout_alignRight="@+id/textView301" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a9"
                    android:id="@+id/textView303"
                    android:layout_below="@+id/textView302"
                    android:layout_alignRight="@+id/textView302"
                    android:textSize="10sp"/>
            </RelativeLayout>







            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/shape"
                >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:id="@+id/imageView100"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/a1"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qqq1122"
                    android:id="@+id/textView304"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/imageView100"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:textColor="#19365E"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a2"
                    android:id="@+id/textView305"
                    android:layout_marginTop="10dp"
                    android:textColor="#979797"
                    android:textSize="8sp"
                    android:layout_below="@+id/textView304"
                    android:layout_alignRight="@+id/textView304" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a1"
                    android:id="@+id/textView306"
                    android:layout_below="@+id/textView305"
                    android:layout_alignRight="@+id/textView305"
                    android:textSize="10sp"/>

            </RelativeLayout>























        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="230dp">

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                >
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:id="@+id/imageView101"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/a1"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qqq1122"
                    android:id="@+id/textView307"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/imageView101"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:textColor="#19365E"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a8"
                    android:id="@+id/textView308"
                    android:layout_marginTop="10dp"
                    android:textColor="#979797"
                    android:textSize="8sp"
                    android:layout_below="@+id/textView307"
                    android:layout_alignRight="@+id/textView307" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a7"
                    android:id="@+id/textView309"
                    android:layout_below="@+id/textView308"
                    android:layout_alignRight="@+id/textView308"
                    android:textSize="10sp"/>
            </RelativeLayout>





















            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="210dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                >
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:id="@+id/imageView102"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/a1"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qqq1122"
                    android:id="@+id/textView310"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/imageView102"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:textColor="#19365E"
                    android:textSize="12sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a5"
                    android:id="@+id/textView311"
                    android:layout_marginTop="10dp"
                    android:textColor="#979797"
                    android:textSize="8sp"
                    android:layout_below="@+id/textView310"
                    android:layout_alignRight="@+id/textView310" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:id="@+id/textView312"
                    android:layout_below="@+id/textView311"
                    android:layout_alignRight="@+id/textView311"
                    android:textSize="10sp"/>
            </RelativeLayout>



















        </LinearLayout>




    </LinearLayout>




    <android.support.design.widget.NavigationView
        android:id="@+id/NA"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        app:headerLayout="@layout/heder_menu_main"
        app:menu="@menu/slider_menu"/>


</android.support.v4.widget.DrawerLayout>
</RelativeLayout>